--- a/.github/blog-post-workflow.yml
+++ b/.github/blog-post-workflow.yml
@@ -11,4 +11,4 @@ jobs:
             - uses: gautamkrishnar/blog-post-workflow@master
               with: 
                 max_post_count: "4"
-                feed_list: "https://dev.to/feed/aldhinoerman"
+                feed_list: "https://aldhinoerman.medium.com/feed"
