--- a/.github/blog-post-workflow.yml
+++ b/.github/blog-post-workflow.yml
@@ -15,4 +15,5 @@ jobs:
          - uses: gautamkrishnar/blog-post-workflow@master
         with:
           comment_tag_name: MEDIUM
+          max_post_count: "4"
           feed_list: "https://aldhinoerman.medium.com/feed"
